[package]
name = "centolla_get_post_lib"
version = "0.1.0"
edition = "2021"
authors = ["FengDotDev <feng.dev>"]
description = "library abstracting the get and post requests for centolla"
license = "MIT OR Apache-2.0" 
repository = "https://github.com/fengdotdev/centolla_get_post_lib"  
readme = "README.md"          
keywords = ["centolla"]  
categories = ["api-mock"]  


[dependencies]

[lib]
crate-type = ["cdylib"]  


